# benchmarks

./: CMakeLists.txt  bit_operations.h  copy.h  draw_benchmark_plot.py  flat_set_insert_benchmark.cc  insert_algorithms.h  list_benchmark.cc  nth_element_benchmark.cc  singular_insert.cc  unique_ptr_set_benchmark.cc
benchmarks/: CMakeLists.txt  flat_set_insert_benchmark.cc  list_benchmark.cc  nth_element_benchmark.cc  unique_ptr_set_benchmark.cc
benchmarks_jsons/: flat_set_insert_1000_1000000  flat_set_insert_100_1000000
tests/: CMakeLists.txt  insert_test.cc
